ADD docs to getTodo.go
